--- a/views/index.ejs
+++ b/views/index.ejs
@@ -43,4 +43,6 @@
       </table>
 </body>
 </html>
-<script src="reload/reload.js"></script>
+<% if (isLocal) { %>
+  <script src="reload/reload.js"></script>
+<% } %>
